# ths

./: .gitignore  Cargo.toml  README.md  justfile  main.ipynb  pyproject.toml
.sqlx/: query-371d621546237b128a951e9a1f940747c5e003874127fe6e664b831e621c9541.json  query-4fadad866eb1d67bb4e05244360f1b16fef341fb253c637993bfafea2274e149.json  query-926118b8fd3ee089541e33ab314bc09aaa654b8365ffe0e5ab6f72d8572edaf0.json  query-9b570c5dc56c8d89f6c37ba3eb37c6bbf7d4d1ea0dcd79dbaae53b841400d840.json  query-9ba85060a22c0888bf8b3e0437cdcc8d8e45869a1c49a520ce3f273d3e4a53b3.json  query-c86bfa44283f54553df6f4248d7277c0a728b72f8677519a2bb6ff97b2976edf.json  query-cea1573c01b0c3b687035c8490557eca2b779369f3ffb55f9ad1894b838a361d.json  query-cf30036c9df91474db2ebe23ec41bf41d60c5996e1f6c916a1e2f3c23d7634e2.json
dashboard/: Cargo.toml
dashboard/src/: handler.rs  lib.rs  main.rs  model.rs  service.rs  sqlite.rs  state.rs
dashboard/static/: custom.css
dashboard/templates/: error.html  history.html  index.html
python/: main.ipynb  main.py
src/: app.rs  lib.rs  main.rs  modbus.rs  model.rs  sqlite.rs
station/: Cargo.toml
station/src/: lib.rs  main.rs  modbus.rs  model.rs  service.rs  sqlite.rs
ths/: Cargo.toml
ths/src/: main.rs
