[package]
name = "ths"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"]}
thiserror = "2.0"
tokio = { version = "1.4", features = ["full"] }
tokio-modbus = "0.16"
tokio-serial = "5.4"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"]}


[lib]
name = "ths"
path = "src/lib.rs"

[[bin]]
name = "ths-app"
path = "src/bin/app.rs"


[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
