[workspace]
members = [ "ths" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Vladimír Vrábeľ <vladimir.vrabely@gmail.com>"]

[workspace.dependencies]


[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.