[package]
name = "dashboard"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
askama = { version = "0.14.0", features = ["blocks"] }
axum = { version = "0.8.4", features = ["form"] }
thiserror = "2.0"
tokio = { version = "1.4", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"]}

[lib]
name = "ths_dashboard"
path = "src/lib.rs"

[[bin]]
name = "ths-dashboard"
path = "src/main.rs"
